# ai-systems

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
common/config/: __init__.py  loader.py  settings.py
common/data/: __init__.py  chunk_utils.py  csv_utils.py  jsonl_utils.py  split_utils.py  text_utils.py
common/helpers/: __init__.py  file_utils.py  path_utils.py  retry.py  serialization.py  time_utils.py
common/logging/: logger.py
legacy/agentic_research_assistant/: README.md  pyproject.toml  requirements.txt
legacy/agentic_research_assistant/src/: app.py  main.py
legacy/agentic_research_assistant/src/agents/: assistant_agent.py  retrieval_agent.py  sql_agent.py  web_search_agent.py
legacy/agentic_research_assistant/src/tools/: retrieval_tools.py  sql_tools.py  web_search_tools.py
legacy/agentic_research_assistant/src/utils/: helpers.py  llm.py  prompts.py  sql_database.py  vectorstore.py
legacy/ai_workforce_simulator/: README.md  pyproject.toml  requirements.txt
legacy/ai_workforce_simulator/src/: main.py
legacy/ai_workforce_simulator/src/agents/: agent_system_prompts.py  agents.py
legacy/ai_workforce_simulator/src/tools/: tool_schemas.py  tools.py
legacy/ai_workforce_simulator/src/utils/: llms.py  message_display.py
legacy/voice_assistant/: README.md  pyproject.toml  requirements.txt
legacy/voice_assistant/src/: llm.py  main.py  routers.py  stt.py  tts.py
legacy/voice_assistant/src/ui/: gradio_app.py
legacy/voice_assistant/src/utils/: time_utils.py
scripts/: validate_common.py
