[project]
name = "ai_systems_root"
version = "0.1.0"
description = "Shared dependencies and tooling for the ai-systems monorepo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
